Fix for bug #21345: Error in cluster logfile rotation. Fixed the cluster logfile rotation code, let the cluster log file be renamed correctly when the main log file exceeds the configured maximum size.